prod propertes